--- a/rust_src/Cargo.toml.in
+++ b/rust_src/Cargo.toml.in
@@ -23,6 +23,7 @@ errno = "0.2"
 field-offset = "0.1"
 flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
 futures = "0.3"
+font-kit = { version = "0.5.0", optional = true }
 itertools = "0.8"
 lazy_static = "1.2"
 libc = "0.2"
@@ -79,7 +80,7 @@ window-system-w32 = []
 # Build with libvterm support.
 libvterm = []
 # Use the webrender window system
-window-system-webrender = []
+window-system-webrender = ["font-kit"]
 # Treat warnings as a build error on Travis.
 strict = []
 
